[gd_scene load_steps=18 format=4 uid="uid://ok0trkn2uktm"]

[ext_resource type="Texture2D" uid="uid://dl8f7yi785lvg" path="res://assets/images/room-tiles.png" id="1_otf4s"]
[ext_resource type="Script" uid="uid://cfup3517fksfc" path="res://scenes/map/game_map.gd" id="1_vvfmu"]
[ext_resource type="Script" uid="uid://cst8n836uy3ah" path="res://scenes/rooms/rooms_tile_map_layer.gd" id="2_in60x"]
[ext_resource type="Resource" uid="uid://d3pb6l0pu6r2k" path="res://resources/rooms/entrance.tres" id="2_ovpmj"]
[ext_resource type="Texture2D" uid="uid://mh2ve7vt8sir" path="res://assets/images/room-contents.png" id="4_lgrrd"]
[ext_resource type="Script" uid="uid://bkrfys0svqjjg" path="res://scenes/rooms/player_tile_map_layer.gd" id="5_8l5wj"]
[ext_resource type="Texture2D" uid="uid://c6gre3ihodrp5" path="res://assets/images/outside-walls.png" id="6_n0glx"]
[ext_resource type="PackedScene" uid="uid://dvtpask3pnk0n" path="res://scenes/rooms/room_drafted_slot.tscn" id="7_vvdv2"]
[ext_resource type="Script" uid="uid://cmynu4aw5jisp" path="res://scenes/map/drafting/drafted_layer.gd" id="8_n458a"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_in60x"]
texture = ExtResource("1_otf4s")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
0:0/0/custom_data_0 = true
0:0/0/custom_data_1 = true
0:0/0/custom_data_2 = true
0:0/0/custom_data_3 = true
1:0/0 = 0
1:0/0/custom_data_1 = true
1:0/0/custom_data_2 = true
1:0/0/custom_data_3 = true
2:0/0 = 0
2:0/0/custom_data_0 = true
2:0/0/custom_data_1 = true
2:0/0/custom_data_2 = true
3:0/0 = 0
3:0/0/custom_data_0 = true
3:0/0/custom_data_1 = true
3:0/0/custom_data_3 = true
0:1/0 = 0
0:1/0/custom_data_0 = true
0:1/0/custom_data_1 = true
0:1/0/custom_data_2 = true
0:1/0/custom_data_3 = true
1:1/0 = 0
1:1/0/custom_data_0 = true
1:1/0/custom_data_1 = true
1:1/0/custom_data_2 = true
1:1/0/custom_data_3 = true
2:1/0 = 0
2:1/0/custom_data_1 = true
2:1/0/custom_data_2 = true
2:1/0/custom_data_3 = true
3:1/0 = 0
3:1/0/custom_data_0 = true
3:1/0/custom_data_1 = true
3:1/0/custom_data_2 = true
0:2/0 = 0
0:2/0/custom_data_0 = true
0:2/0/custom_data_2 = true
0:2/0/custom_data_3 = true
1:2/0 = 0
1:2/0/custom_data_0 = true
1:2/0/custom_data_1 = true
1:2/0/custom_data_3 = true
2:2/0 = 0
2:2/0/custom_data_0 = true
2:2/0/custom_data_1 = true
3:2/0 = 0
3:2/0/custom_data_2 = true
3:2/0/custom_data_3 = true
0:3/0 = 0
0:3/0/custom_data_1 = true
0:3/0/custom_data_2 = true
1:3/0 = 0
1:3/0/custom_data_0 = true
1:3/0/custom_data_2 = true
2:3/0 = 0
2:3/0/custom_data_0 = true
2:3/0/custom_data_3 = true
3:3/0 = 0
3:3/0/custom_data_1 = true
3:3/0/custom_data_3 = true
0:4/0 = 0
0:4/0/custom_data_2 = true
1:4/0 = 0
1:4/0/custom_data_0 = true
2:4/0 = 0
2:4/0/custom_data_3 = true
3:4/0 = 0
3:4/0/custom_data_1 = true

[sub_resource type="TileSet" id="TileSet_aktd5"]
tile_size = Vector2i(24, 24)
custom_data_layer_0/name = "door_up"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "door_down"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "door_left"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "door_right"
custom_data_layer_3/type = 1
sources/0 = SubResource("TileSetAtlasSource_in60x")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1y67t"]
texture = ExtResource("4_lgrrd")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0

[sub_resource type="TileSet" id="TileSet_vvfmu"]
tile_size = Vector2i(24, 24)
sources/0 = SubResource("TileSetAtlasSource_1y67t")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vvdv2"]
texture = ExtResource("6_n0glx")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_8l5wj"]
tile_size = Vector2i(24, 24)
sources/0 = SubResource("TileSetAtlasSource_vvdv2")

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_n458a"]
scenes/1/scene = ExtResource("7_vvdv2")

[sub_resource type="TileSet" id="TileSet_ovpmj"]
tile_size = Vector2i(24, 24)
sources/0 = SubResource("TileSetScenesCollectionSource_n458a")

[node name="GameMap" type="Node2D"]
script = ExtResource("1_vvfmu")
_entrance_room_data = ExtResource("2_ovpmj")

[node name="RoomsLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAABAAUAAAAAAAAAAAABAAQAAAAAAAAAAAABAAMAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAEAAAADAAQAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAIAAAAAAAAAAAADAAEAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_aktd5")
script = ExtResource("2_in60x")
blank_tile_source_id = 0
blank_tile_atlas_coord = Vector2i(0, 0)
start_tile_source_id = 0
start_tile_atlas_coord = Vector2i(0, 1)
end_tile_source_id = 0
end_tile_atlas_coord = Vector2i(1, 0)

[node name="PlayerLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_vvfmu")
script = ExtResource("5_8l5wj")
pc_tile_source_id = 0
pc_tile_atlas_coord = Vector2i(0, 0)

[node name="HeartLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_vvfmu")

[node name="TreasureLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_vvfmu")

[node name="OuterWallsLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAAAAAAGAAAAAAAAAAEAAAAAAAYAAAABAAAAAAAAAAUAAAACAAEAAAAAAAQAAAACAAEAAAAAAAMAAAACAAEAAAAAAAIAAAACAAEAAAAAAAEAAAACAAEAAAABAAAAAAAAAAIAAAACAAAAAAAAAAIAAAADAAAAAAAAAAIAAAAEAAAAAAAAAAIAAAAFAAAAAAAAAAIAAAAGAAEAAAABAAIAAAAGAAIAAAABAAIAAAAGAAMAAAABAAIAAAAGAAQAAAABAAIAAAAGAAUAAAABAAIAAAAGAAYAAAAAAAAAAAABAAYAAAABAAEAAAACAAYAAAABAAEAAAADAAYAAAACAAIAAAAEAAYAAAABAAEAAAAFAAYAAAABAAEAAAA=")
tile_set = SubResource("TileSet_8l5wj")

[node name="DraftedLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_ovpmj")
script = ExtResource("8_n458a")
draft_tile_source_id = 0
